force-app/main/default/objects/LLC_BI__Loan_Modification__c/fields/LLC_BI__Date_to_Colson__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Date_to_Colson__c</fullName>
    <description>This field is not currently used as part of the product. It is being reviewed to deprecate.</description>
    <inlineHelpText>The date  this modification was sent to Colson for approval</inlineHelpText>
    <label>Date to Colson</label>
    <type>Date</type>
</CustomField>