force-app/main/default/objects/LLC_BI__Loan_Modification__c/fields/LLC_BI__Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Effective_Date__c</fullName>
    <description>This date field is a manually entered and optional. It is used in the loan modification process to specify the date at which the modifications made will take effect.</description>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>