force-app/main/default/objects/LLC_BI__Loan_Modification__c/fields/LLC_BI__Loan__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Loan__c</fullName>
    <description>This is a Master-Detail field that is automatically populated when starting a loan modification from the loan. The field is used to specify the loan that the modification is associated to. Loan modifications in general are not required but are optionally created based on financial institution business process.</description>
    <label>Loan</label>
    <referenceTo>LLC_BI__Loan__c</referenceTo>
    <relationshipLabel>Loan Modifications</relationshipLabel>
    <relationshipName>Loan_Modifications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>