force-app/main/default/objects/LLC_BI__Loan_Modification__c/fields/LLC_BI__Loan_Modification_Sent__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Loan_Modification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is used to specify whether the loan modification has been sent for approval. If the box is checked, the loan modification has been sent. This field is automatically populated when the loan modification record is submitted for approval.</description>
    <inlineHelpText>Check this box when the loan modification has been sent</inlineHelpText>
    <label>Loan Modification Sent</label>
    <type>Checkbox</type>
</CustomField>