force-app/main/default/objects/LLC_BI__Loan_Modification__c/fields/LLC_BI__Mod_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Mod_Type__c</fullName>
    <description>This field is a picklist field that is optional and manually entered. It is used to specify whether a notification or a approval is assigned for this loan modification</description>
    <label>Mod Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Notification</fullName>
                <default>true</default>
                <label>Notification</label>
            </value>
            <value>
                <fullName>Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>