force-app/main/default/objects/LLC_BI__Loan_Modification__c/fields/LLC_BI__New_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__New_Amount__c</fullName>
    <description>This currency field is used to specify a new amount. It is an optional and manually entered field. If applicable, it is the amount that is being proposed by the loan modification.</description>
    <inlineHelpText>If applicable, please enter newly proposed amount</inlineHelpText>
    <label>New Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>