force-app/main/default/objects/LLC_BI__Loan_Modification__c/fields/LLC_BI__New_Rate__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__New_Rate__c</fullName>
    <description>This percent field is used to specify a new interest rate. It is an optional and manually entered.  If applicable, it is the new rate that is being proposed by the loan modification.</description>
    <inlineHelpText>If applicable, please enter new proposed rate</inlineHelpText>
    <label>New Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>