force-app/main/default/objects/LLC_BI__Loan_Modification__c/fields/LLC_BI__Objective__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Objective__c</fullName>
    <description>This field is a free text field used to specify what the modification hopes to accomplish. This field is manually entered and optional.</description>
    <inlineHelpText>Please identify what this modification hopes to accomplish</inlineHelpText>
    <label>Objective</label>
    <type>TextArea</type>
</CustomField>